fix: feather icons relative url issue
Loading feather icons from JS messed up relative URLs.
We now load all icons in HTML as hidden and toggle visibility in JS.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,6 +118,10 @@ figure h4::before {
   fill: none;
 }
 
+.is-hidden {
+  display: none;
+}
+
 /* Code blocks */
 code {
   background-color: #f1f1f1;
@@ -248,7 +252,6 @@ footer {
 article .title {
   margin-bottom: 1em;
 }
-
 
 .site-description {
   display: flex;
